<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/uncharted_emerald_cross_relic" >
    
    <TextView
                android:id="@+id/augment_screen_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="246dp"
                android:textSize="50dp"
                android:textColor="@android:color/white"
                android:text="@string/AugmentScreenHeader" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.41" >
        
        <FrameLayout
            android:id="@+id/aug_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_alignParentTop="true" >
            
	        <ImageView
	            android:id="@+id/aug_image_view"
	            android:layout_width="640dp"
	            android:layout_height="480dp"
	            android:contentDescription="@string/AugClueImgDesc"
	            android:src="@drawable/ic_launcher" />
	        
	        <com.ScavengerHunt.view.AugmentClueView
	            android:id="@+id/aug_image_overlay"
	            android:layout_width="640dp"
	            android:layout_height="480dp"
	            android:background="@android:color/transparent" />
        
        </FrameLayout>


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/aug_image_layout"
            android:orientation="vertical" >

            <Button
                android:id="@+id/add_text_button"
                style="@style/ParchmentStyle"
                android:text="@string/AddTextButton" />

            <EditText
                android:id="@+id/add_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:visibility="gone" >
            </EditText>

            <Button
                android:id="@+id/add_graffiti_button"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:background="@drawable/parchment_scroll_horiz_bgnd_cropped"
                android:text="@string/AddGraffitiButton" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:background="@drawable/parchment_scroll_horiz_bgnd_cropped"
                android:text="@string/DoneButton" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
